--- a/KIH.html
+++ b/KIH.html
@@ -60,15 +60,15 @@
       </ol>
     <div id="article">
       <h2><a href="https://www.instagram.com/e.star_000/" target="_blank">KIH</a></h2>
-        <video src="video/v(2).mp4" autoplay loop></video>
-        <video src="video/v(4).mp4" autoplay loop></video><br><br>
-        <img src="photo\ih/ih (7).jpg"><br>입술 도장 찍어준 날<br><br>
-        <img src="photo\ih/ih (1).jpg">
-        <img src="photo\ih/ih (2).jpg">
-        <img src="photo\ih/ih (3).jpg" style="width:60%"><br>강쥐랑 함께 한 강남 데이트<br><br>
-        <img src="photo\ih/ih (4).jpg">
-        <img src="photo\ih/ih (6).jpg"><br>이뻐 죽겠는 내꾸<br><br>
-        <img src="photo\ih/ih (5).jpg" style="width:60%"><br>두 달만에 연락해선 쌉부치 손 보여주기
+        <video src="v(2).mp4" autoplay loop></video>
+        <video src="v(4).mp4" autoplay loop></video><br><br>
+        <img src="ih (7).jpg"><br>입술 도장 찍어준 날<br><br>
+        <img src="ih (1).jpg">
+        <img src="ih (2).jpg">
+        <img src="ih (3).jpg" style="width:60%"><br>강쥐랑 함께 한 강남 데이트<br><br>
+        <img src="ih (4).jpg">
+        <img src="ih (6).jpg"><br>이뻐 죽겠는 내꾸<br><br>
+        <img src="ih (5).jpg" style="width:60%"><br>두 달만에 연락해선 쌉부치 손 보여주기
         <p></p>
       </div>
     </div>
