--- a/SMS.html
+++ b/SMS.html
@@ -61,12 +61,12 @@
     <div id="article">
       <h2><a href="https://www.instagram.com/minseong_/" target="_blank">SMS</a></h2>
       <p>
-        <video src="video/v(1).mp4" autoplay loop></video><br><br>
-        <img src="photo\ms/ms (3).jpg" style="width:60%"><br>강남에서 신발 커스텀<br><br>
-        <img src="photo\ms/ms (4).jpg" style="width:60%"><br>오와?<br><br>
-        <img src="photo\ms/ms (1).jpg">
-        <img src="photo\ms/ms (2).jpg"><br>사랑니 빼고 건대 데이트<br><br>
-        <img src="photo\ms/ms (5).jpg" style="width:80%"><br>댕댕이랑 놀기<br><br>
+        <video src="v(1).mp4" autoplay loop></video><br><br>
+        <img src="ms (3).jpg" style="width:60%"><br>강남에서 신발 커스텀<br><br>
+        <img src="ms (4).jpg" style="width:60%"><br>오와?<br><br>
+        <img src="ms (1).jpg">
+        <img src="ms (2).jpg"><br>사랑니 빼고 건대 데이트<br><br>
+        <img src="ms (5).jpg" style="width:80%"><br>댕댕이랑 놀기<br><br>
       </p>
       </div>
     </div>
