--- a/IH_MS.html
+++ b/IH_MS.html
@@ -71,32 +71,32 @@
       <h2><a href="https://www.instagram.com/s2_08_s2/" target="_blank">IH♡MS</a></h2>
       <p>
         <div id="bvideo">
-         <video src="video/v(3).mp4" autoplay loop></video><br><br>
+         <video src="v(3).mp4" autoplay loop></video><br><br>
         </div>
-        <img src="photo\us/us (4).jpg">
-        <img src="photo\us/us (5).jpg"><br>부산 부산<br><br>
-        <img src="photo\us/us (6).jpg" style="width:60%"><br>홈데이트 제대로 즐긴 날<br><br>
-        <img src="photo\us/us (10).jpg">
-        <img src="photo\us/us (9).jpg"><br>익선동이랑 을지로<br><br>
-        <img src="photo\us/us (8).jpg">
-        <img src="photo\us/us (7).jpg"><br>사진들 넘 맘에 들어!<br><br>
-        <img src="photo\us/us (11).jpg" style="width:80%"><br>그저 사랑<br><br>
-        <img src="photo\us/us (12).jpg" style="width:60%"><br>언젠가.. 지하철에서<br><br>
-        <img src="photo\us/us (13).jpg">
-        <img src="photo\us/us (14).jpg"><br>완전 옛날이네?<br>내 기준 첫데이트<br><br>
-        <img src="photo\us/us (16).jpg">
-        <img src="photo\us/us (18).jpg">
-        <img src="photo\us/us (17).jpg">
-        <img src="photo\us/us (19).jpg"><br>이쪽 술집에서 죽어라 놀 때<br><br>
-        <img src="photo\us/us (20).jpg" style="width:60%"><br>귀여워.<br>물론 나.<br><br>
-        <img src="photo\us/us (21).jpg">
-        <img src="photo\us/us (23).jpg">
-        <img src="photo\us/us (24).jpg">
-        <img src="photo\us/us (22).jpg"><br>우리 사랑하고 있어요<br><br>
-        <img src="photo\us/us (25).jpg">
-        <img src="photo\us/us (26).jpg">
-        <img src="photo\us/us (27).jpg">
-        <img src="photo\us/us (28).jpg"><br><strong>뽀뽀해줘.<br><br>
+        <img src="us (4).jpg">
+        <img src="us (5).jpg"><br>부산 부산<br><br>
+        <img src="us (6).jpg" style="width:60%"><br>홈데이트 제대로 즐긴 날<br><br>
+        <img src="us (10).jpg">
+        <img src="us (9).jpg"><br>익선동이랑 을지로<br><br>
+        <img src="us (8).jpg">
+        <img src="us (7).jpg"><br>사진들 넘 맘에 들어!<br><br>
+        <img src="us (11).jpg" style="width:80%"><br>그저 사랑<br><br>
+        <img src="us (12).jpg" style="width:60%"><br>언젠가.. 지하철에서<br><br>
+        <img src="us (13).jpg">
+        <img src="us (14).jpg"><br>완전 옛날이네?<br>내 기준 첫데이트<br><br>
+        <img src="us (16).jpg">
+        <img src="us (18).jpg">
+        <img src="us (17).jpg">
+        <img src="us (19).jpg"><br>이쪽 술집에서 죽어라 놀 때<br><br>
+        <img src="us (20).jpg" style="width:60%"><br>귀여워.<br>물론 나.<br><br>
+        <img src="us (21).jpg">
+        <img src="us (23).jpg">
+        <img src="us (24).jpg">
+        <img src="us (22).jpg"><br>우리 사랑하고 있어요<br><br>
+        <img src="us (25).jpg">
+        <img src="us (26).jpg">
+        <img src="us (27).jpg">
+        <img src="us (28).jpg"><br><strong>뽀뽀해줘.<br><br>
       </p>
       </div>
     </div>
