--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       </ol>
       <div id="article">
         <div id="indeximage">
-          <img src="photo\us/us (1).jpg">
-          <img src="photo\us/us (15).jpg">
+          <img src="us (1).jpg">
+          <img src="us (15).jpg">
         </div>
         <p>I love you.<br><strong>2022.08.22~ ing</p>
       </div>
